@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.19) unstable; urgency=low
   * memcached-client: release socket on marshalling error
   * stock: unref caller pool in abort handler
   * stock: lazy cleanup
+  * http-cache: copy caller_pool to local variable
 
  --
 
